# openCV

./: .gitignore  CMakeLists.txt  README.md
configs/: motion.yaml  pose.yaml  squat.yaml  tracking.yaml
docs/: PLATFORM_RUN_GUIDE.md  POSE_ANALYTICS_DECISION_MAP.md  POSE_INFERENCE_GUIDE.md  SQUAT_ANALYTICS_GUIDE.md  VIDEO_ENGINE_GUIDE.md
include/analytics/: AnalyticsTypes.hpp  IPoseAnalyzer.hpp  SquatAnalyzer.hpp  SquatSummaryWriter.hpp
include/core/: FrameContext.hpp  FrameTimeline.hpp  IFrameProcessor.hpp  IVideoSource.hpp  Pipeline.hpp
include/processors/: MotionDetector.hpp  ObjectTracker.hpp  OverlayRenderer.hpp  PoseAnalyticsProcessor.hpp  PoseAnalyticsRenderer.hpp  PoseEstimator.hpp  ResizeProcessor.hpp  SkeletonRenderer.hpp
include/sources/: VideoFileSource.hpp  WebcamSource.hpp
include/utils/: Profiler.hpp
src/: main.cpp
tests/: test_frame_timeline.cpp  test_motion.cpp  test_skeleton_renderer.cpp  test_squat_analyzer.cpp  test_tracker.cpp
